fix(preview): removed transition to stop weirdness on iOS

--- a/site/web/app/themes/morby2016/assets/styles/blocks/preview.css
+++ b/site/web/app/themes/morby2016/assets/styles/blocks/preview.css
@@ -10,7 +10,6 @@
   color: $color-lightest;
   text-align: center;
   text-shadow: 0 0 4px color( $color-darkest alpha(25%) );
-  transition: 3s background-size linear;
 
   &:hover {
     background-size: 300%;
